CATTY-16 Implement Play Sound And Wait Brick

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1448,6 +1448,9 @@
 "Start sound" = "Start sound";
 
 /* No comment provided by engineer. */
+"Start sound and wait" = "Start sound and wait";
+
+/* No comment provided by engineer. */
 "step" = "step";
 
 /* No comment provided by engineer. */
