CATTY-94 adapt home screen titles
CATTY-94 adapt home screen title upload

CATTY-94 adapt home screen title continue

CATTY-94 adapt home screen title projects

CATTY-94 Remove unused constant kLocalizedUpload

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -200,6 +200,9 @@
 "Categories" = "Categories";
 
 /* No comment provided by engineer. */
+"Catrobat community" = "Catrobat community";
+
+/* No comment provided by engineer. */
 "ceil" = "ceil";
 
 /* No comment provided by engineer. */
@@ -282,6 +285,9 @@
 
 /* No comment provided by engineer. */
 "Continue" = "Continue";
+
+/* No comment provided by engineer. */
+"Continue project" = "Continue project";
 
 /* No comment provided by engineer. */
 "Control" = "Control";
@@ -537,9 +543,6 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Error saving file";
-
-/* No comment provided by engineer. */
-"Explore" = "Explore";
 
 /* No comment provided by engineer. */
 "Explore apps" = "Explore apps";
@@ -1211,6 +1214,9 @@
 "Projects" = "Projects";
 
 /* No comment provided by engineer. */
+"Projects on device" = "Projects on device";
+
+/* No comment provided by engineer. */
 "Rate Us" = "Rate Us";
 
 /* No comment provided by engineer. */
@@ -1647,9 +1653,6 @@
 
 /* No comment provided by engineer. */
 "Unsupported Script:" = "Unsupported Script:";
-
-/* No comment provided by engineer. */
-"Upload" = "Upload";
 
 /* No comment provided by engineer. */
 "Upload project" = "Upload project";
