--- a/src/Catty/Resources/Localization/pl.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/pl.lproj/Localizable.strings
@@ -989,7 +989,7 @@
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
-"No input. Please enter at least %lu character(s)." = "Brak danych. Podaj co najmniej %lu znaków.";
+"Please enter at least %lu character(s)." = "Brak danych. Podaj co najmniej %lu znaków.";
 
 /* No comment provided by engineer. */
 "No or invalid image name entered, try again." = "Brak lub niepoprawnie wpisana nazwa obrazu, spróbuj ponownie.";
