--- a/src/Catty/Resources/Localization/de.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/de.lproj/Localizable.strings
@@ -989,7 +989,7 @@
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
-"No input. Please enter at least %lu character(s)." = "No input. Please enter at least %lu character(s).";
+"Please enter at least %lu character(s)." = "Please enter at least %lu character(s).";
 
 /* No comment provided by engineer. */
 "No or invalid image name entered, try again." = "Sie haben keinen oder einen ungültigen Bildnamen eingegeben. Bitte versuchen Sie es erneut.";
