--- a/src/Catty/Resources/Localization/es.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/es.lproj/Localizable.strings
@@ -989,7 +989,7 @@
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
-"No input. Please enter at least %lu character(s)." = "No input. Please enter at least %lu character(s).";
+"Please enter at least %lu character(s)." = "Please enter at least %lu character(s).";
 
 /* No comment provided by engineer. */
 "No or invalid image name entered, try again." = "No se ha introducido nombre de imagen o es inválido, por favor pruebe otra vez.";
