--- a/src/Catty/Resources/Localization/ko.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ko.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "acceleration-sensor" = "가속 센서";
 
 /* No comment provided by engineer. */
-"Actors or objects" = "Actors or objects";
+"Actors and objects" = "Actors and objects";
 
 /* No comment provided by engineer. */
 "Add" = "추가하기";
