--- a/src/Catty/Resources/Localization/ru.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ru.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "acceleration-sensor" = "датчик ускорения";
 
 /* No comment provided by engineer. */
-"Actors or objects" = "Actors or objects";
+"Actors and objects" = "Actors and objects";
 
 /* No comment provided by engineer. */
 "Add" = "Добавить";
