--- a/src/Catty/Resources/Localization/zh-Hans.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/zh-Hans.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "acceleration-sensor" = "加速度传感器";
 
 /* No comment provided by engineer. */
-"Actors or objects" = "Actors or objects";
+"Actors and objects" = "Actors and objects";
 
 /* No comment provided by engineer. */
 "Add" = "添加";
